--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section>
     <h1 class="game-title">Tic Tac Toe</h1>
-
+    <h2 class="winner-name"></h2>
     <div class="game-container">
       <div class="cell"></div>
       <div class="cell"></div>
