--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
 <body>
   <section>
     <h1 class="game-title">Tic Tac Toe</h1>
-    <h2 class="winner-name"></h2>
+    <div class="winner-name"></div>
+    <section class="display announcer hide"></section>
     <div class="game-container">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div id="1" class="cell"></div>
+      <div id="2" class="cell"></div>
+      <div id="3" class="cell"></div>
+      <div id="4" class="cell"></div>
+      <div id="5" class="cell"></div>
+      <div id="6" class="cell"></div>
+      <div id="7" class="cell"></div>
+      <div id="8" class="cell"></div>
+      <div id="9" class="cell"></div>
     </div>
     <h2 class="game-status"></h2>
+
+    <h2 class="display-player"></h2>
     <button class="game-restart">Restart Game</button>
   </section>
   <script src="app.js"></script>
