--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
   <section>
     <h1 class="game-title">Tic Tac Toe</h1>
-    <div class="winner-name"></div>
-    <section class="display announcer hide"></section>
+    <div class="winner-name">Play</div>
     <div class="game-container">
       <div id="1" class="cell"></div>
       <div id="2" class="cell"></div>
@@ -26,12 +25,9 @@
       <div id="8" class="cell"></div>
       <div id="9" class="cell"></div>
     </div>
-    <h2 class="game-status"></h2>
-
-    <h2 class="display-player"></h2>
     <button class="game-restart">Restart Game</button>
   </section>
-  <script src="app.js"></script>
+  <script src="game.js"></script>
 </body>
 
 </html>
