--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div id="8" class="cell"></div>
       <div id="9" class="cell"></div>
     </div>
-    <button class="game-restart">Restart Game</button>
+    <button class="game-restart hide">Restart Game</button>
   </section>
-  <script src="game.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
