--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="8" class="cell"></div>
       <div id="9" class="cell"></div>
     </div>
-    <button class="game-restart hide">Restart Game</button>
+    <button onclick="gameReset()" class="game-restart hide">Restart Game</button>
   </section>
   <script src="index.js"></script>
 </body>
